k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node
  name: node
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node
    spec:
      containers:
      - image: gcr.io/gke-demo-295923/node:latest
        name: node
        resources: {}
status: {}
