k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
  namespace: apps
spec:
  rules:
  - host: node.34.67.40.53.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: node
          servicePort: 8080
